# stonks_analytics_scraper

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit-config.yaml  setup-hooks.sh
stonks_analytics_scraper/: __main__.py  director.py
stonks_analytics_scraper/db/entity/: base.py
stonks_analytics_scraper/db/entity/fiis/: __init__.py  fii.py  fii_price.py  fii_statistics.py
stonks_analytics_scraper/db/entity/stocks/: __init__.py  stock.py  stock_price.py  stock_statistics.py
stonks_analytics_scraper/db/mapper/: fii_mapper.py  mapper.py  stock_mapper.py
stonks_analytics_scraper/db/mapper/namedtuple/: __init__.py  stock.py
stonks_analytics_scraper/db/repository/: fii_repository.py  stock_repository.py
stonks_analytics_scraper/db/service/: stock_service.py
stonks_analytics_scraper/scraper/: resource_type.py  scraper.py
stonks_analytics_scraper/scraper/format/: stocks.py
stonks_analytics_scraper/scraper/shape/: fiis.py  stocks.py
stonks_analytics_scraper/tickers/: tickers_acoes.csv  tickers_fiis.csv
stonks_analytics_scraper/utils/: data_type.py
tests/db/mapper/: test_stock_mapper.py
